--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
+    "@apollo/server": "^4.11.0",
     "apollo-server-express": "^3.13.0",
     "graphql": "^16.9.0"
   }
